welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	if (a>=10 && a<=20) {
		if (b>=10 && b<=20) return Math.max(a,b)
		else return a
	else if (b>=10 && b<=20) return b
	else return 0
	}
}
